testsuite/poke.pkl/ass-diag-4.pk
/* { dg-do compile } */

var i = 10;
i = "foo";  /* { dg-error ".*\n.*" } */
